Добавил Оцу и Сужение+Расширение